# scanbd

./: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.conf  Makefile.conf.in  Makefile.in  Makefile.include  Makefile.include.in  Makefile.simple  aclocal.m4  common.h  configure  configure.ac  daemonize.c  dbus.c  example.script  sane.c  saned.fdi  scanadf.script  scanbd.c  scanbd.conf  scanbd.conf.bsd  scanbd.debian  scanbd.h  scanbd_dbus.conf  scanbd_dbus.h  scanbdservice.conf  scanbuttond_loader.c  scanbuttond_loader.h  scanbuttond_wrapper.c  slog.c  test.c  test.script  testscanbuttond.c  udev.c  udev.h
conf/: Makefile.am  Makefile.in  scanbd.conf  scanbd.conf.bsd
conf/scanner.d/: avision.conf  canon.conf  fujitsu.conf  hp.conf  snapscan.conf
contrib/: Makefile.am  Makefile.in  PKGBUILD  action.script  actions.script  insert.script
doc/: Makefile.in  Makefile.simple  README.txt  scanbd.man  scanbm.man
integration/: 98-snapscan.rules  FreeBSD.rc  Makefile.am  Makefile.in  README  sane-port  scanbd.spec
integration/systemd/: README.systemd  de.kmux.scanbd.server.service  scanbd.service  scanbd.socket  scanbm.socket  scanbm@.service.sane-git
qscanbd/: common.h
scanbuttond/: Makefile  Makefile.in  Makefile.simple
scanbuttond/backends/: Makefile  Makefile.am  Makefile.in  Makefile.simple  artec_eplus48u.c  artec_eplus48u.h  epson.c  epson_vphoto.h  genesys.c  gt68xx.h  hp3500.h  hp3900.h  hp5590.h  meta.c  meta.conf  niash.c  plustek.c  plustek_umax.c  snapscan.h
scanbuttond/include/: Makefile.am  Makefile.in
scanbuttond/include/scanbuttond/: common.h  libusbi.h  loader.h  scanbuttond.h
scanbuttond/interface/: Makefile  Makefile.am  Makefile.in  Makefile.simple  libusbi.c
scripts/: Makefile.am  Makefile.in  example.script  scanadf.script  test.script
src/scanbd/: Makefile.am  Makefile.in  Makefile.simple  common.h  config.c  config.h  daemonize.c  dbus.c  sane.c  scanbd.c  scanbd.h  scanbd_dbus.h  scanbuttond_loader.c  scanbuttond_loader.h  scanbuttond_wrapper.c  scanbuttond_wrapper.h  slog.c  slog.h
src/scanbuttond/: Makefile.am  Makefile.in
src/scanbuttond/backends/: Makefile.am  Makefile.in  Makefile.simple  artec_eplus48u.h  epson_vphoto.c  gt68xx.c  hp5590.c  meta.c  meta.conf  niash.h  plustek.c  plustek.h  plustek_umax.h
src/scanbuttond/include/: Makefile.in
src/scanbuttond/include/scanbuttond/: loader.h
src/scanbuttond/interface/: Makefile.am  Makefile.in  Makefile.simple  libusbi.c
trunk/: 99-saned.rules  AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.conf  Makefile.in  Makefile.include.in  Makefile.simple  aclocal.m4  common.h  configure  configure.ac  daemonize.c  dbus.c  example.script  sane.c  scanbd.c  scanbd.conf  scanbd.conf.bsd  scanbd.debian  scanbd.h  scanbd_dbus.h  scanbdservice.conf  scanbuttond_loader.c  scanbuttond_loader.h  scanbuttond_wrapper.c  scanbuttond_wrapper.h  slog.c  slog.h  test.c  test.script
trunk/conf/: Makefile.am  Makefile.in  scanbd.conf  scanbd.conf.bsd
trunk/conf/scanner.d/: avision.conf  canon.conf  fujitsu.conf  hp.conf  pixma.conf  snapscan.conf
trunk/contrib/: Makefile.am  Makefile.in  PKGBUILD  action.script
trunk/doc/: Makefile.am  Makefile.in  Makefile.simple  README.txt  scanbd.man  scanbm.man
trunk/integration/: 99-saned.rules  FreeBSD.rc  Makefile.am  Makefile.in  README  check_usb_autosuspend.sh  sane-port  scanbd.debian  scanbdservice.conf
trunk/integration/systemd/: README.systemd  de.kmux.scanbd.server.service  scanbd.service  scanbd@.service  scanbm@.service
trunk/scanbuttond/: Makefile  Makefile.in  Makefile.simple
trunk/scanbuttond/backends/: Makefile  Makefile.in  Makefile.simple  artec_eplus48u.c  epson.c  epson.h  epson_vphoto.c  epson_vphoto.h  genesys.c  genesys.h  gt68xx.c  gt68xx.h  hp3500.c  hp3900.c  hp3900.h  hp5590.c  hp5590.h  meta.c  mustek.c  niash.c  plustek_umax.c  snapscan.c
trunk/scanbuttond/include/: Makefile.in
trunk/scanbuttond/include/scanbuttond/: backend.h  libusbi.h  loader.h  scanbuttond.h
trunk/scanbuttond/interface/: Makefile  Makefile.in  libusbi.c
trunk/scripts/: Makefile.am  Makefile.in  copy.script
trunk/src/scanbd/: Makefile.am  Makefile.in  Makefile.simple  common.h  config.h  sane.c  scanbd.c  scanbd.h  scanbd_dbus.h  scanbuttond_loader.c  scanbuttond_wrapper.c  scanbuttond_wrapper.h  slog.c  testscanbuttond.c  udev.c  udev.h
trunk/src/scanbuttond/: Makefile.am  Makefile.in  Makefile.simple
trunk/src/scanbuttond/backends/: Makefile.am  Makefile.in  Makefile.simple  genesys.h  hp3900.c  hp5590.c  meta.c  meta.h  mustek.h
trunk/src/scanbuttond/include/: Makefile.am  Makefile.in
trunk/src/scanbuttond/include/scanbuttond/: libusbi.h
trunk/src/scanbuttond/interface/: Makefile.in  Makefile.simple
