scanbdconfdir = @SCANBD_CFG_DIR@/
scannerconfdir = @SCANBD_CFG_DIR@/scanner.d

scanbdconf_DATA = \
	scanbd.conf

scannerconf_DATA = \
	scanner.d/avision.conf \
	scanner.d/fujitsu.conf \
	scanner.d/hp.conf \
	scanner.d/pixma.conf \
	scanner.d/snapscan.conf \
	scanner.d/canon.conf

EXTRA_DIST = \
	scanbd.conf \
	scanbd.conf.bsd \
	scanner.d/avision.conf \
	scanner.d/fujitsu.conf \
	scanner.d/hp.conf \
	scanner.d/pixma.conf \
	scanner.d/snapscan.conf \
	scanner.d/canon.conf

